<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2018 Google LLC.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="app_name">Sceneform Lighting</string>
    <string name="lights">Lights</string>
    <string name="shadows">Shadows</string>
    <string name="color">Color</string>
    <string name="intensity">Intensity</string>
    <string name="light_rotation_speed">Light Rotation Speed</string>
    <string name="number_of_lights">Number of Lights</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="metallic_factor">Metallic Factor</string>
    <string name="roughness_factor">Roughness Factor</string>
    <string name="lighting_menu">LIGHTING MENU</string>
</resources>

