<!--
   Copyright 2017 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<LinearLayout
    android:id="@+id/lightControlsContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="6dp">
  <LinearLayout
      android:id="@+id/TextContainer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical">
    <TextView
        android:id="@+id/lightSwitchControlsText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/lights"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
    <TextView
        android:id="@+id/shadowSwitchControlsText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:gravity="center"
        android:text="@string/shadows"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
    <TextView
        android:id="@+id/colorSpinnerText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:text="@string/color"
        android:padding="4dp"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
    <TextView
        android:id="@+id/lightIntensityText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/intensity"
        android:padding="4dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
    <TextView
        android:id="@+id/lightRotationSpeedText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:text="@string/light_rotation_speed"
        android:gravity="center"
        android:padding="4dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
    <TextView
        android:id="@+id/numOfLightsText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:text="@string/number_of_lights"
        android:gravity="center"
        android:padding="4dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
  </LinearLayout>
  <LinearLayout
      android:id="@+id/lightButtonsContainer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
    <ToggleButton
        android:id="@+id/lightSwitchControlsButton"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_gray_button"
        android:layout_height="48dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:text="@string/togglebutton"
        />
    <ToggleButton
        android:id="@+id/shadowControlButton"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_gray_button"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:text="@string/togglebutton"/>
    <Spinner
        android:id="@+id/colorSpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="1"
        />
    <SeekBar
        android:id="@+id/lightIntensitySeekBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="1"/>
    <SeekBar
        android:id="@+id/lightRotationSpeedSlider"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="1"/>
    <SeekBar
        android:id="@+id/numOfLightsSlider"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="1"/>
  </LinearLayout>
</LinearLayout>
